# tbank

./: .dockerignore  .env  .env.example  README.md  docker-compose.yml
api/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
api/app/: main.py
api/app/core/: config.py  dependencies.py  factory.py  security.py
api/app/db/: __init__.py  base.py  session.py
api/app/db/migrations/: env.py
api/app/db/models/: __init__.py  account.py  event.py  notification.py  queue.py  ticket.py
api/app/routers/: __init__.py  event.py  health.py  queue.py  ticket.py
api/app/routers/analytics/: event_analytics.py  queue_analytics.py  ticket_analytics.py
api/app/routers/private/: __init__.py  auth.py  event.py  health.py  management.py  queue.py  ticket.py
api/app/routers/public/: auth.py  ticket.py
api/app/routers/websockets/: management.py  notifications.py  ticket.py
api/app/schemas/: __init__.py  admin.py  auth.py  event.py  notification.py  queue.py  ticket.py  websocket.py
api/app/schemas/analytics/: event_analytics.py  queue_analytics.py  ticket_analytics.py
api/app/services/: background_tasks.py  notification_service.py
api/app/services/analytics/: event_analytics.py  queue_analytics.py  ticket_analytics.py  ticket_ws.py
api/app/services/crud/: __init__.py  event.py  notification.py  queue.py  ticket.py
api/app/services/websockets/: notifications.py  notifier.py
api/app/utils/: auth.py  conftest.py  create_first_admin.py  test_all.py  test_analytics.py  test_auth.py  test_not.py  ws.py  ws_tests.py
api/scripts/: entry.sh
frontend/: Dockerfile  (+5 more)
(+30 files in other folders)
